--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.31.0",
     "redux": "^5.0.1",
